# softnote

./: .appveyor.yml  .cirrus.yml  .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libsoftnoteconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  softnote.sln  softnote_config.h  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  softnote-cli.bash-completion  softnote-tx.bash-completion  softnoted.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  softnote-conf.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  softnote-cli.1  softnote-qt.1  softnote-tx.1  softnote-util.1  softnote-wallet.1  softnoted.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  addrdb.h  (+113 more)
(+868 files in other folders)
