dist_man1_MANS=

if BUILD_SOFTNOTED
  dist_man1_MANS+=softnoted.1
endif

if ENABLE_QT
  dist_man1_MANS+=softnote-qt.1
endif

if BUILD_SOFTNOTE_CLI
  dist_man1_MANS+=softnote-cli.1
endif

if BUILD_SOFTNOTE_TX
  dist_man1_MANS+=softnote-tx.1
endif

if BUILD_SOFTNOTE_UTIL
  dist_man1_MANS+=softnote-util.1
endif

if ENABLE_WALLET
if BUILD_SOFTNOTE_WALLET
  dist_man1_MANS+=softnote-wallet.1
endif
endif
